- Music Page:    - fixed song playList carets (animate on click & correct alignment)    - fixed social/download icons show/hide sync    - fixed next/prev button sync    - fixed playList active song /inactive song animation sync    - linked social/download icons show/hide function to play event

--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,22 @@
     .social .fa-lg, .social .fa-square, .download .fa-lg, .download .fa-square, .download .fa-stack-2x, .download .fa-2x {
         font-size: 1.7em;
     }
+    .titleAlign {
+        padding-left: 20px;
+    }
+    .fa-caret-right, .fa-caret-down {
+        margin-left: -15px;
+        color: #9e9e9e;
+        text-shadow: 1px 1px 1px #000;
+    }
+    .fa-rotate-90 {
+        vertical-align: middle;
+        -webkit-transition: all 125ms;
+        -moz-transition: all 125ms;
+        -ms-transition: all 125ms;
+        -o-transition: all 125ms;
+        transition: all 125ms;
+    }
     .fa-stack, .fa-lg, .fa-stack-1x, .fa-facebook {
         height: 1.7em;
     }
@@ -352,8 +368,8 @@
         background: transparent url('../images/footerBg2.png') repeat-x;
         border-top: 1px #161616 solid;
         position: fixed;
-        /*bottom: -70px;*/
-        bottom: 0;
+        bottom: -70px;
+        /*bottom: 0;*/
         padding: 0 40px;
         margin-top: 100px;
     }
@@ -487,6 +503,7 @@ input[type=range]::-webkit-slider-thumb:hover {
 input[type=range]::-webkit-slider-thumb {
     border-radius: 3px;
     border: 1px solid #070707;
+    box-shadow: 0 0 4px rgba(255,255,255,0.2);
     height: 24px;
     width: 7px;
     margin-top: -8px;
@@ -611,8 +628,8 @@ input[type=range]:focus::-ms-fill-upper {
     border: solid 1px #333;
     background: #0079FF;
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#0096FF), to(#005DFF));
-    background: -webkit-linear-gradient(0% 0%, 0% 100%, from(#0096FF), to(#005DFF));
-    background: -moz-linear-gradient(center top, #0096FF, #005DFF);
+    /*background: -webkit-linear-gradient(0% 0%, 0% 100%, from(#0096FF), to(#005DFF));*/
+    /*background: -moz-linear-gradient(center top, #0096FF, #005DFF);*/
 
     padding: .5em 2em .55em;
     border-radius: .5em;
@@ -673,13 +690,13 @@ input[type=range]:focus::-ms-fill-upper {
     }
 
     90% {
-        -webkit-transform: translateX(1px) rotate(0);
-        transform: translateX(1px) rotate(0);
+        -webkit-transform: translateX(1px) rotate(0deg);
+        transform: translateX(1px) rotate(0deg);
     }
 
     100% {
-        -webkit-transform: translateX(-1px) rotate(0);
-        transform: translateX(-1px) rotate(0);
+        -webkit-transform: translateX(-1px) rotate(0deg);
+        transform: translateX(-1px) rotate(0deg);
     }
 }
 
@@ -733,14 +750,14 @@ input[type=range]:focus::-ms-fill-upper {
     }
 
     90% {
-        -webkit-transform: translateX(1px) rotate(0);
-        transform: translateX(1px) rotate(0);
+        -webkit-transform: translateX(1px) rotate(0deg);
+        transform: translateX(1px) rotate(0deg);
         text-shadow: 0 0 30px rgba(255,255,255,0.05);
     }
 
     100% {
-        -webkit-transform: translateX(-1px) rotate(0);
-        transform: translateX(-1px) rotate(0);
+        -webkit-transform: translateX(-1px) rotate(0deg);
+        transform: translateX(-1px) rotate(0deg);
         text-shadow: 0 0 30px rgba(255,255,255,0);
     }
 }
